# FileEncryptor

./: .gitignore  .gitmodules  README.md
backend/: CMakeLists.txt  README.md  crypto.cpp  crypto.h  main.cpp
frontend/: README.md  gulpfile.js  index.html.php  index.php  package.json
frontend/bootstrap/css/: custom.css
frontend/inc/: App.php  AssetManager.php
frontend/public/: index.php
frontend/views/: index.php
ui/: encryptor
ui/FileEncryptor/: FileEncryptor.pro  mainwidget.cpp  mainwidget.h  mainwidget.ui  pictures.qrc
ui/build-FileEncryptor-Desktop_Qt_5_5_0_clang_64bit-Debug/: Makefile  moc_mainwidget.cpp  qrc_pictures.cpp  ui_mainwidget.h
ui/build-FileEncryptor-Desktop_Qt_5_5_0_clang_64bit-Debug/FileEncryptor.app/Contents/: Info.plist
